# communications

./: README.md
comm_msgs/: CMakeLists.txt  package.xml
comm_msgs/msg/: CommEvent.msg  OccupancyGridCommEvent.msg
comm_msgs/srv/: OccTransfer.srv
map_stitching/: CMakeLists.txt  package.xml
map_stitching/include/: MapService.h  MapStitching.h
map_stitching/src/: MapService.cpp  MapStitching.cpp
mock_communication/: CMakeLists.txt  package.xml
mock_communication/include/: MockComm.h
mock_communication/src/: MockComm.cpp
