<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mock_communication</name>
  <version>0.0.1</version>
  <description>Event-based mock communication packages for ROS2 simulations and some deployments.</description>
  <maintainer email="alysson.ribeiro.silva@gmail.com">Alysson</maintainer>
  <license>GPL-3.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>comm_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>nav2_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
